Update README.md with instructions to run locally.